# Allison

./: .gitignore  LICENSE  README.md  __init__.py  main.ipynb  pyproject.toml  requirements.txt  test.py
allison/: __init__.py  device.py
allison/activation/: functions.py
allison/base/: tensor.py
allison/clustering/: __init__.py  k_means.py
allison/cuda/: __init__.py  cuda.py
allison/cupy/: cupy.py
allison/datasets/: __init__.py  dataloader.py  dataset.py  train_test.py
allison/linear_model/: __init__.py  linear_regression.py  logistic_regression.py
allison/linear_models/: functional_regression.py  linear_model.py  linear_regression.py  logistic_regression.py  polinomic_regression.py
allison/metrics/: __init__.py  metrics.py
allison/nn/: __init__.py  layers.py  loss.py  models.py  net.py  optim.py  scores.py  softmax.py  tensor.py
allison/optim/: __init__.py  optim.py
allison/optimizers/: sgd.py
allison/preprocessing/: __init__.py  enconders.py  scalers.py  transformers.py
allison/regression/: __init__.py  base.py  functional_regression.py  linear_regression.py  logistic_regression.py  loss.py  polinomic_regression.py
allison/tensor/: tensor.py
allison/utils/: math.py  metrics.py  utils.py
clustering/: K_means.py  __init__.py
examples/basics/: 1-tensor.ipynb  2-layers.ipynb
examples/benchmarks/: 1-Linear Regression.ipynb
examples/clustering/: Clustering in Allison.ipynb  k-means.ipynb  kmeans.py
examples/linear/: Functional Regression.ipynb  Linear Regression.ipynb  Linear Regresssion in Allison.ipynb  Logistic Regression in Allison.ipynb  Logistic Regression.ipynb  (+3 more)
experiments/: graphs.ipynb  main.ipynb  test_gpu.ipynb
linear_models/: LinearRegression.py  Linear_regression.py  __init__.py  _linear_regression.py  _logistic_regression.py  _polinomic_regression.py  linear_regression.py  logistic_regression.py
nn/: __init__.py  _functions.py  _layers.py  _models.py  layers.py
tests/: test.py
utils/: __init__.py  _activation.py  _loss.py  _metrics.py  metrics.py
(+51 files in other folders)
