[project]
name = "allison"
version = "0.1.0"
description = "A Machine Learning library for begainers"
authors = [
  {name = "Mitchell Mirano", email = "mitchellmirano25@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0,<3.0",
]


[project.optional-dependencies]
cp13= [
    # Para local si tienes CUDA 13.x
    "cupy-cuda13x>=13.0,<14.0",
]

[dependency-groups]
dev = [
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]