[project]
name = "allison"
version = "0.1.0"
description = "A Machine Learning library for begainers"
authors = [
  {name = "Mitchell Mirano", email = "mitchellmirano25@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Las dependencias base deben ir aquí, si las hubiera.
    # No se incluye numpy aquí para evitar conflictos con los grupos opcionales.
]

[project.optional-dependencies]
# Para desarrollo (sin GPU)
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "pandas",
]

# Para usuarios que solo usan CPU
cpu = [
    "numpy>=2.0",
]
# Para CUDA 12.x (Colab)
cp12 = [
    "cupy-cuda12x>=12.0,<13.0",
    "numpy>=1.20,<2.0",
]
# Para CUDA 13.x
cp13 = [
    "cupy-cuda13x>=13.0",
    "numpy>=2.0,<3.0",
]