[project]
name = "allison"
version = "1.1.2"
description = "A Machine Learning library for begainers"
authors = [
  {name = "Mitchell Mirano", email = "mitchellmirano25@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "numpy>=2.0",
]

[project.optional-dependencies]

# Para CUDA 13.x
cp13 = [
    "cupy-cuda13x>=13.0",
    "numpy>=2.0,<3.0",
]

[dependency-groups]
dev = [
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
]
